# senior-data-engineer-master-prep

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
ai/: README.md  __init__.py  client.py  evaluator.py  prompts.py  schemas.py
companies/: README.md
dashboard/: __init__.py  app.py  components.py  file_viewer.py  roadmap_ui.py  services.py
docs/: AI_INTEGRATION.md  COMPLEXITY_GUIDE.md  INTERVIEW_WORKFLOW.md  LOCAL_DASHBOARD.md  MIGRATION_REPORT.md  PATTERN_RECOGNITION.md  PUBLICATION_SAFETY.md  PYTHON_ERRORS.md  QUESTION_TEMPLATE.py  README.md  REAL_WORLD_PROBLEM_TEMPLATE.md  ROADMAP.md  STUDY_PLAN.md
docs/dsa/: README.md  (+3 more)
leetcode_python/: __init__.py
scripts/: add_question.py  enrich_markdown_diagrams.py  export_progress.py  generate_daily_plan.py  generate_weekly_review.py  log_practice.py  migrate_existing_files.py  migrate_text_notes.py  normalize_question_headers.py  sync_catalog.py  validate_questions.py
sql/: README.md
study/: current_month.md  daily_plan.md  mistake_log.md
tests/: test_ai.py  test_catalog_sync.py  test_dashboard_persistence.py  test_dashboard_services.py  test_file_viewer.py  test_markdown_migration.py  test_roadmap.py  test_roadmap_scheduler.py  test_roadmap_ui.py  test_scheduler.py  test_scripts.py  test_tracker.py
tracker/: __init__.py  analytics.py  catalog.py  database.py  models.py  questions.json  roadmap.py  roadmap_models.py  scheduler.py  seed_data.py  study_plan.json
(+128 files in other folders)
