[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "senior-data-engineer-master-prep"
version = "0.1.0"
description = "Senior data engineering interview study and spaced-repetition toolkit"
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
  ".venv",
  "Senior Data Engineer Interview Prep",
  # Numbered files intentionally preserve the author's original formatting and draft issues.
  "leetcode_python/**/[0-9][0-9][0-9][0-9]_*.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E402", "E501"]
